# opengl_playground

./: .gitignore  Makefile  README.md  index.py  pyproject.toml  requirements.txt  test.py
src/: camera.py  display_manager.py  graphics.py  graphics_engine.py  models.py  vao.py  vbo.py
src/graphics/: camera.py  engine.py  light.py  mesh.py  model.py  scene.py  scene_renderer.py  shader_program.py  texture.py  vbo.py
src/mesh/: mesh.py  ui.py  utils.py
src/restart/: display_manager.py  graphics_engine.py  mesh.py  shader_program.py  singleton_field_class.py  utils.py  vao.py  vbo.py
src/restart/tests/: test_singleton_field_class.py
src/shader/: simple.frag  text.vert
src/shaders/: default.frag  default.vert
src/tests/: test_singleton_field_class.py
