[tool.poetry]
name = "opengl_playground"
version = "0.1.0"
description = ""
authors = ["Ruoqi Huang <huangruoqi374@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
pygame = "^2.1.2"
moderngl = "^5.7.3"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
